        PR middle-end/43365         * tree-eh.c (replace_goto_queue): Also replace in the eh_seq.         (lower_try_finally): Save and restore eh_seq around the expansion         of the try-finally.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@157499 138bc75d-0d04-0410-961f-82ee72b054a4